--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
   "name": "portfolio_pranav_project",
-  "version": "1.0.0",
+  "version": "2.0.0", 
   "description": "Pranav's portfolio website",
+
+  "engines": {
+    "node": "18.x"
+  },
+
   "scripts": {
-    "start": "node_modules/next/dist/bin start -p $PORT",
+    "start": "next start -p $PORT",
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "prettier": "prettier -write .",
-    "lint": "next lint"
+    "prettier": "prettier -write .", 
+    "lint": "next lint",
+    "audit": "npm audit"
   },
-  "keywords": [],
+
   "author": "Pranav Arora<pranav2vis@gmail.com>",
   "license": "ISC",
+
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
     "@chakra-ui/react": "^1.8.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.6.0", 
     "framer-motion": "^4.1.17",
-    "next": "^12.0.10",
+    "next": "^13.0.0",
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.2",  
     "react-icons": "^4.3.1",
+    "react-three-fiber": "^6.2.1",
     "three": "^0.137.5"
   },
+
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.10",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.7.2" 
   }
 }
